--- a/atendimentos.html
+++ b/atendimentos.html
@@ -234,6 +234,9 @@
                 <a href="index.html" class="px-3 py-2 rounded-lg text-sm font-medium text-slate-500 hover:bg-slate-100 transition-colors">
                     <i data-lucide="layout-dashboard" class="w-4 h-4 inline mr-1"></i>Dashboard
                 </a>
+                <a href="campanhas.html" class="px-3 py-2 rounded-lg text-sm font-medium text-slate-500 hover:bg-slate-100 transition-colors">
+                    <i data-lucide="megaphone" class="w-4 h-4 inline mr-1"></i>Campanhas
+                </a>
                 <a href="anny.html" class="px-3 py-2 rounded-lg text-sm font-medium text-slate-500 hover:bg-slate-100 transition-colors">
                     <i data-lucide="sparkles" class="w-4 h-4 inline mr-1"></i>Anny BI
                 </a>
