fix: remove aba duplicada Conversas/Campanhas do header de atendimentos
- Remove toggle tab Conversas/Campanhas (redundante com links do nav)
- Remove botão ' Dashboard' duplicado (já existe no nav)
- Destaca 'Conversas' como aba ativa no nav (bg-emerald-100)
- Header agora tem: CRM | Dashboard | Campanhas | Anny BI | Conversas (ativo) | Central de Atendimento

--- a/atendimentos.html
+++ b/atendimentos.html
@@ -240,23 +240,10 @@
                 <a href="anny.html" class="px-3 py-2 rounded-lg text-sm font-medium text-slate-500 hover:bg-slate-100 transition-colors">
                     <i data-lucide="sparkles" class="w-4 h-4 inline mr-1"></i>Anny BI
                 </a>
-            </nav>
-            <div class="w-px h-6 bg-slate-200"></div>
-            <!-- Abas Conversas / Campanhas -->
-            <div class="flex items-center bg-slate-100 p-1 rounded-lg">
-                <button id="tabChats" class="px-4 py-2 rounded-md text-sm font-medium bg-white text-emerald-700 shadow-sm transition-colors">
+                <span class="px-3 py-2 rounded-lg text-sm font-medium bg-emerald-100 text-emerald-700">
                     <i data-lucide="message-circle" class="w-4 h-4 inline mr-1"></i>Conversas
-                </button>
-                <a href="campanhas.html" id="tabCampaigns" class="px-4 py-2 rounded-md text-sm font-medium text-slate-500 hover:text-slate-700 transition-colors">
-                    <i data-lucide="megaphone" class="w-4 h-4 inline mr-1"></i>Campanhas
-                </a>
-                </button>
-            </div>
-            <div class="w-px h-6 bg-slate-200"></div>
-            <a href="index.html" class="flex items-center gap-2 px-4 py-2 rounded-xl text-slate-600 hover:text-primary-600 hover:bg-slate-50 transition-colors">
-                <i data-lucide="arrow-left" class="w-4 h-4"></i>
-                <span class="text-sm font-medium">Dashboard</span>
-            </a>
+                </span>
+            </nav>
             <div class="w-px h-6 bg-slate-200"></div>
             <div class="flex items-center gap-3">
                 <div class="w-9 h-9 rounded-xl bg-emerald-100 flex items-center justify-center">
